@@ -62,10 +62,8 @@
 typedef char regex_errbuf[STR_SIZE];
 
 /*
- * Structure used by amglob_to_regex() to replace particular string positions
- * and/or characters. Its fields are:
- * - begin: what the beginnin of the string should be replaced with;
- * - end: what the end of the string should be replaced with;
+ * Structure used by amglob_to_regex() to expand particular glob characters. Its
+ * fields are:
  * - question_mark: what the question mark ('?') should be replaced with;
  * - star: what the star ('*') should be replaced with;
  * - double_star: what two consecutive stars should be replaced with.
@@ -76,8 +74,6 @@ typedef char regex_errbuf[STR_SIZE];
  */
 
 struct subst_table {
-    const char *begin;
-    const char *end;
     const char *question_mark;
     const char *star;
     const char *double_star;
@@ -88,8 +84,6 @@ struct subst_table {
  */
 
 static struct subst_table glob_subst_stable = {
-    "^", /* begin */
-    "$", /* end */
     "[^/]", /* question_mark */
     "[^/]*", /* star */
     NULL /* double_star */
@@ -102,14 +96,12 @@ static size_t glob_worst_case = 5; /* star */
  */
 
 static struct subst_table tar_subst_stable = {
-    "(^|/)", /* begin */
-    "($|/)", /* end */
     "[^/]", /* question_mark */
     ".*", /* star */
     NULL /* double_star */
 };
 
-static size_t tar_worst_case = 5; /* begin or end */
+static size_t tar_worst_case = 4; /* question_mark */
 
 /*
  * REGEX FUNCTIONS
@@ -316,8 +308,8 @@ char *make_exact_host_expression(const char *host)
  * Turn a glob into a regex.
  */
 
-static char *amglob_to_regex(const char *str, struct subst_table *table,
-    size_t worst_case)
+static char *amglob_to_regex(const char *str, const char *begin,
+    const char *end, struct subst_table *table, size_t worst_case)
 {
     const char *src;
     char *result, *dst;
@@ -340,14 +332,13 @@ static char *amglob_to_regex(const char *str, struct subst_table *table,
      * - final 0.
      */
 
-    result = g_malloc(strlen(table->begin) + strlen(str) * worst_case
-        + strlen(table->end) + 1);
+    result = g_malloc(strlen(begin) + strlen(str) * worst_case + strlen(end) + 1);
 
     /*
      * Start by copying the beginning of the regex...
      */
 
-    dst = g_stpcpy(result, table->begin);
+    dst = g_stpcpy(result, begin);
 
     /*
      * ... Now to the meat of it.
@@ -450,7 +441,7 @@ straight_copy:
      */
 
     if (!in_quote)
-        dst = g_stpcpy(dst, table->end);
+        dst = g_stpcpy(dst, end);
     /*
      * Finalize, return.
      */
@@ -465,7 +456,7 @@ straight_copy:
 
 char *glob_to_regex(const char *glob)
 {
-    return amglob_to_regex(glob, &glob_subst_stable, glob_worst_case);
+    return amglob_to_regex(glob, "^", "$", &glob_subst_stable, glob_worst_case);
 }
 
 int match_glob(const char *glob, const char *str)
@@ -517,7 +508,8 @@ char *validate_glob(const char *glob)
 
 static char *tar_to_regex(const char *glob)
 {
-    return amglob_to_regex(glob, &tar_subst_stable, tar_worst_case);
+    return amglob_to_regex(glob, "(^|/)", "($|/)", &tar_subst_stable,
+        tar_worst_case);
 }
 
 int match_tar(const char *glob, const char *str)
@@ -700,13 +692,11 @@ static int match_word(const char *glob, const char *word, const char separator)
          * Fill in our substitution table and generate the regex
          */
 
-        table.begin = begin;
-        table.end = end;
         table.question_mark = MATCHWORD_QUESTIONMARK_EXPANSION(separator);
         table.star = MATCHWORD_STAR_EXPANSION(separator);
         table.double_star = MATCHWORD_DOUBLESTAR_EXPANSION;
 
-        regex = amglob_to_regex(g, &table, worst_case);
+        regex = amglob_to_regex(g, begin, end, &table, worst_case);
     }
 
     ret = do_match(regex, nword, TRUE);
